# elo-rating

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
elo_rating/: __init__.py
tests/: test_elo.py
